Updates to default server properties for page split bug. Will revert this when persistit bug is resolved.

--- a/conf/config/server.properties
+++ b/conf/config/server.properties
@@ -31,3 +31,6 @@ akserver.port=5140
 # port to which to start RMI. the Persistit AdminUI utility can attach
 # via RMI.  remove to avoid starting a RMI server
 persistit.rmiport=8081
+
+# to control how pages are split
+persistit.splitpolicy=NICE
