--- a/redhat/server.properties
+++ b/redhat/server.properties
@@ -21,3 +21,6 @@ akserver.datapath=/var/lib/akiban
 
 # port on which to start the Akiban Server
 akserver.port=5140
+
+# to control how pages are split
+persistit.splitpolicy=NICE
