Skipping row conversion + merging if columnSelector is null.

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -34,7 +34,7 @@ akserver.verbose=
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
 
-akserver.debug.useOperatorStore=false
+akserver.debug.useOperatorStore=true
 
 mysql.install.dir=
 
