Add new property defining the maximum serialized AIS size used by the PSSM.
Add helper method for serializing during the commit that retries until the ByteBuffer is expanded to the maximum allowed.

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -22,6 +22,7 @@ akserver.dxl.lock.fair=true
 akserver.host=0.0.0.0
 akserver.jar_file=
 akserver.max_heap_mb=
+akserver.max_ais_size_bytes=1048576
 akserver.memcached.port=11211
 akserver.memcached.output.format=json
 akserver.name=
