--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -34,6 +34,7 @@ akserver.tcp_no_delay=true
 akserver.verbose=
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
+akserver.postgres.port=15432
 
 akserver.debug.useOperatorStore=true
 
