--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
         </repository>
     </distributionManagement>
     <repositories>
+        <!-- yaml -->
+        <repository>
+            <id>Sonatype-public</id>
+            <name>SnakeYAML repository</name>
+            <url>http://oss.sonatype.org/content/groups/public/</url>
+        </repository>
         <!-- jmemcached-core -->
         <repository>
             <id>thimbleware.repo</id>
@@ -67,6 +73,16 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.9-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>2.0</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
