I got the greek alphabet wrong, whoops!

--- a/src/test/resources/com/akiban/server/service/servicemanager/configuration/yaml/test-simple.yaml
+++ b/src/test/resources/com/akiban/server/service/servicemanager/configuration/yaml/test-simple.yaml
@@ -5,6 +5,6 @@
     my_three : gamma
 - lock: delta
 - require : epsilon
-- require locked: theta
+- require locked: zeta
 - locked : eta
-- bound : zeta
+- bound : theta
