--- a/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
+++ b/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
@@ -1,14 +1,17 @@
 - bind:
-    - com.akiban.server.AkServer : com.akiban.server.AkServer
-    - com.akiban.server.service.config.ConfigurationService : com.akiban.server.service.UnitTestServiceFactory$TestConfigService
-    - com.akiban.server.service.dxl.DXLService : com.akiban.server.service.dxl.DXLServiceImpl
-    - com.akiban.server.service.jmx.JmxRegistryService : com.akiban.server.service.UnitTestServiceFactory$MockJmxRegistryService
-    - com.akiban.server.service.log4jconfig.Log4JConfigurationService : com.akiban.server.service.log4jconfig.Log4JConfigurationServiceImpl
-    - com.akiban.server.service.memcache.MemcacheService : com.akiban.server.service.memcache.MemcacheServiceImpl
-    - com.akiban.server.service.network.NetworkService : com.akiban.server.test.ApiTestBase$TestServiceServiceFactory$1
-    - com.akiban.server.service.session.SessionService : com.akiban.server.service.session.SessionServiceImpl
-    - com.akiban.server.service.stats.StatisticsService : com.akiban.server.service.stats.StatisticsServiceImpl
-    - com.akiban.server.service.tree.TreeService : com.akiban.server.service.tree.TreeServiceImpl
-    - com.akiban.server.store.SchemaManager : com.akiban.server.store.PersistitStoreSchemaManager
-    - com.akiban.server.store.Store : com.akiban.qp.persistitadapter.OperatorStore
-    - com.akiban.sql.pg.PostgresService : com.akiban.sql.pg.PostgresServerManager
+    com.akiban.server.AkServerEmptyInterface : com.akiban.server.AkServer
+    com.akiban.server.service.config.ConfigurationService : com.akiban.server.service.config.ConfigurationServiceImpl
+    com.akiban.server.service.dxl.DXLService : com.akiban.server.service.dxl.DXLServiceImpl
+    com.akiban.server.service.jmx.JmxRegistryService : com.akiban.server.service.jmx.JmxRegistryServiceImpl
+    com.akiban.server.service.log4jconfig.Log4JConfigurationService : com.akiban.server.service.log4jconfig.Log4JConfigurationServiceImpl
+    com.akiban.server.service.memcache.MemcacheService : com.akiban.server.service.memcache.MemcacheServiceImpl
+    com.akiban.server.service.network.NetworkService : com.akiban.server.service.network.NetworkServiceImpl
+    com.akiban.server.service.session.SessionService : com.akiban.server.service.session.SessionServiceImpl
+    com.akiban.server.service.stats.StatisticsService : com.akiban.server.service.stats.StatisticsServiceImpl
+    com.akiban.server.service.tree.TreeService : com.akiban.server.service.tree.TreeServiceImpl
+    com.akiban.server.store.SchemaManager : com.akiban.server.store.PersistitStoreSchemaManager
+    com.akiban.server.store.Store : com.akiban.qp.persistitadapter.OperatorStore
+    com.akiban.sql.pg.PostgresService : com.akiban.sql.pg.PostgresServerManager
+
+# as a crutch, we require the SchemaManager so that the afterStart loop finds it
+- require : com.akiban.server.store.SchemaManager
