--- a/src/test/resources/com/akiban/server/service/servicemanager/test-services-requires.yaml
+++ b/src/test/resources/com/akiban/server/service/servicemanager/test-services-requires.yaml
@@ -3,3 +3,4 @@
     - com.akiban.server.service.network.NetworkService
     - com.akiban.server.service.stats.StatisticsService
     - com.akiban.sql.pg.PostgresService
+    - com.akiban.server.service.jmx.JmxRegistryService
