--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -40,9 +40,11 @@ akserver.debug.useOperatorStore=true
 mysql.install.dir=
 
 persistit.buffersize=16384
+
 # minimum, maximum, reserved, fraction.  Allocates:
 # ((available - reserved) * fraction) bounded by minimum and maximum
-persistit.memory.16384=128M,512G,64M,0.75
+persistit.buffer.memory.16384=20M,512G,64M,0.75
+
 persistit.journalpath=${datapath}/akiban_journal
 
 persistit.logfile=${datapath}/persistit_${timestamp}.log
