--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <!-- this is the default version number, hudson job sets this to the official number -->
         <BZR_REVISION></BZR_REVISION>
         <akiban.test.extraJvmArgs></akiban.test.extraJvmArgs>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <distributionManagement>
         <snapshotRepository>
