--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>com.akiban</groupId>
             <artifactId>akiban-persistit-core</artifactId>
-            <version>2.4.2-SNAPSHOT</version>
+            <version>2.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.akiban</groupId>
