--- a/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
+++ b/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
@@ -12,3 +12,4 @@
     com.akiban.server.store.SchemaManager : com.akiban.server.store.PersistitStoreSchemaManager
     com.akiban.server.store.Store : com.akiban.qp.persistitadapter.OperatorStore
     com.akiban.sql.pg.PostgresService : com.akiban.sql.pg.PostgresServerManager
+    com.akiban.server.service.instrumentation.InstrumentationService : com.akiban.server.service.instrumentation.InstrumentationServiceImpl
