adding AkServerEmptyInterface to required services

--- a/packages-common/services-config.yaml
+++ b/packages-common/services-config.yaml
@@ -1,4 +1,5 @@
 - require:
+    - com.akiban.server.AkServerEmptyInterface           # loads the AKSERVER jmx bean
     - com.akiban.server.service.memcache.MemcacheService # HAPI
     - com.akiban.server.service.network.NetworkService   # MySQL replication
     - com.akiban.server.service.stats.StatisticsService  # Stats gathering
