Added methods to InstrumentationService to expose concept of global query log. Not logging anything yet.

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -34,6 +34,8 @@ akserver.postgres.port=15432
 akserver.tcp_no_delay=true
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
+akserver.querylog=false
+akserver.querylogfile=
 
 mysql.install.dir=
 
