Addressing review comments from Nathan.

--- a/packages-common/server.properties
+++ b/packages-common/server.properties
@@ -43,3 +43,13 @@ akserver.postgres.port=15432
 
 # port on which to start the memcache service that HAPI works over
 akserver.memcached.port=11211
+
+#######################################################################
+## Query logging options
+#######################################################################
+
+# whether to enable the akiban query log or not
+akserver.querylog=false
+
+# file in which queries will be logged
+akserver.querylogfile=/var/log/akiban/queries.log
