- Removing ConfigurationService.getProperty(String propertyName, String defaultValue). All defaults must now be provided in configuration-defaults.properties - Removing usages of the above method, and adding defaults to the .properties file as appropriate - Reworking some of the PostgresServer/Manager so that we reload configs on startup, rather than just at construction time

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -14,23 +14,26 @@
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
 
-REQUIRED.akiban=admin
+REQUIRED.akiban=admin,datapath
 REQUIRED.akserver=jar_file, name
 
 akserver.datapath=
 akserver.dxl.lock.fair=true
+akserver.hapi.scanrows.messageSizeBytes=-1
 akserver.host=0.0.0.0
 akserver.jar_file=
 akserver.max_heap_mb=
 akserver.max_ais_size_bytes=1048576
 akserver.memcached.port=11211
-akserver.memcached.output.format=json
+akserver.memcached.processor=SCANROWS
+akserver.memcached.output.format=JSON
 akserver.name=
 akserver.network.threads.min=1
 akserver.network.threads.max=200
 akserver.network.shutdown.waitseconds=10
 akserver.port=5140
 akserver.postgres.port=15432
+akserver.postgres.statementCacheCapacity=0
 akserver.tcp_no_delay=true
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
@@ -53,3 +56,6 @@ persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:${buffersize},ini
 persistit.sysvolume=akiban_system
 persistit.txnvolume=akiban_txn
 
+# Test configs. Should probably be in a separate file at some point.
+
+akserver.test.mt.spawncount=50000
