moving REQUIRED datapath config to akserver, instead of akiban

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -14,8 +14,8 @@
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
 
-REQUIRED.akiban=admin,datapath
-REQUIRED.akserver=jar_file, name
+REQUIRED.akiban=admin
+REQUIRED.akserver=jar_file, name, datapath
 
 akserver.dxl.lock.fair=true
 akserver.hapi.scanrows.messageSizeBytes=-1
