Resolving more circular deps, fixing usage of services, etc

--- a/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
+++ b/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
@@ -1,4 +1,5 @@
 - bind:
+    com.akiban.server.store.AisHolder : com.akiban.server.store.AisHolderImpl
     com.akiban.server.AkServerEmptyInterface : com.akiban.server.AkServer
     com.akiban.server.service.config.ConfigurationService : com.akiban.server.service.config.ConfigurationServiceImpl
     com.akiban.server.service.dxl.DXLService : com.akiban.server.service.dxl.DXLServiceImpl
