Converting the request messages to take a ServiceManager instance to their execute method. This is a slight improvement over SMI.get in that it at least lets us prove there are no circular dependencies. If there were any, the offending nodes would have to both go through SMI.get() directly for it to go uncaught; if they go through guice, we'll catch it.

--- a/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
+++ b/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
@@ -14,3 +14,7 @@
     com.akiban.server.store.Store : com.akiban.qp.persistitadapter.OperatorStore
     com.akiban.sql.pg.PostgresService : com.akiban.sql.pg.PostgresServerManager
     com.akiban.server.service.instrumentation.InstrumentationService : com.akiban.server.service.instrumentation.InstrumentationServiceImpl
+
+# This binding is really just a crutch while we move away from the static SMI.get() pattern
+- bind:
+    com.akiban.server.service.ServiceManager : com.akiban.server.service.ServiceManagerImpl
