Fix code to get all unit and IT tests to pass. Most involve updating the exceptions being tested/caught but MultiScanUpdateIT caught me mangling the BasicDMLFunctions handling updates with cursors.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -24,9 +24,9 @@
 2012 = Table `{0}`.`{1}` already has column `{2}`
 2013 = Group `{0}` already exists 
 2014 = Table {0} has one or more child tables in the group  
-2015 = Can not drop index {0}` from table `{1}`.`{2}`
+2015 = DROP_INDEX_NOT_ALLOWED: Unused error code
 2016 = Cannot drop table `{0}`.`{1}`, it has child table `{2}`.`{3}`
-2017 = Index `{0}` can not be added to a table
+2017 = Index `{0}` can not be added or removed from table `{1}`.`{2}`
 2018 = Group index `{0}` has tables `{1}`.`{2}` and `{3}`.`{4}` on different branches
 2019 = Expected {0} in format of table.column
 
