Update error_code.properties to use names, not numbers as the lookup key

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -1,107 +1,107 @@
-0000 = UNKNOWN: Unused error code
-0001 = UNEXPECTED EXCEPTION: unused error code
-0900 = UNSUPPORTED_OPERATION: unused error code
+UNKNOWN 		= UNKNOWN: Unused error code
+UNEXPECTED_EXCEPTION  	= UNEXPECTED EXCEPTION: unused error code
+UNSUPPORTED_OPERATION	= UNSUPPORTED_OPERATION: unused error code
 
-1000=SERVER_SHUTDOWN: Unused Error Code
-1001=AIS generation seen was {0,number,integer} but current generation is {1,number,integer}
-1002=AIS Model version mismatch, expected version {0,number,integer} v.s. actual version {0,number,integer}
+SERVER_SHUTDOWN		=SERVER_SHUTDOWN: Unused Error Code
+STALE_AIS		=AIS generation seen was {0,number,integer} but current generation is {1,number,integer}
+METAMODEL_MISMATCH	=AIS Model version mismatch, expected version {0,number,integer} v.s. actual version {0,number,integer}
 
 #
 # DDL ERRORS
 # 
-2000 = [{0}] {1}: {2}
-2001 = Table `{0}`.`{1}` has unsupported character set `{2}` 
-2002 = Cannot create or modify table `{0}` in protected schema `{1}` 
-2003 = Table `{0}`.`{1}` joins to protected table `{2}`.`{3}` 
-2004 = Table `{0}`.`{1}` joins to undefined table `{2}`.`{3}`  
-2005 = Table `{0}`.`{1}` join reference part `{2}` does not match `{3}`.`{4}` primary key part `{5}`
-2006 = Table `{0}`.`{1}` already exists 
-2007 = Cannot drop non-leaf table `{1}`.`{2}`
-2008 = Table `{0}`.`{1}` has column `{2}` with unsupported data type `{3}`
-2009 = Table `{0}`.`{1}` has joins to two parents 
-2010 = Table `{0}`.`{1}` index `{2}` has unsupported type `{3}` from column `{4}`
-2011 = Table `{0}`.`{1}` index `{2}` exceeds maximum key size
-2012 = Table `{0}`.`{1}` already has column `{2}`
-2013 = Group `{0}` already exists 
-2014 = Table {0} has one or more child tables in the group  
-2015 = DROP_INDEX_NOT_ALLOWED: Unused error code
-2016 = Cannot drop table `{0}`.`{1}`, it has child table `{2}`.`{3}`
-2017 = Index `{0}` can not be added or removed from table `{1}`.`{2}`
-2018 = Group index `{0}` has tables `{1}`.`{2}` and `{3}`.`{4}` on different branches
-2019 = Expected {0} in format of table.column
+PARSE_EXCEPTION 	= [{0}] {1}: {2}
+UNSUPPORTED_CHARSET 	= Table `{0}`.`{1}` has unsupported character set `{2}` 
+PROTECTED_TABLE 	= Cannot create or modify table `{0}` in protected schema `{1}` 
+JOIN_TO_PROTECTED_TABLE = Table `{0}`.`{1}` joins to protected table `{2}`.`{3}` 
+JOIN_TO_UNKNOWN_TABLE 	= Table `{0}`.`{1}` joins to undefined table `{2}`.`{3}`  
+JOIN_TO_WRONG_COLUMNS 	= Table `{0}`.`{1}` join reference part `{2}` does not match `{3}`.`{4}` primary key part `{5}`
+DUPLICATE_TABLE 	= Table `{0}`.`{1}` already exists 
+UNSUPPORTED_DROP 	= Cannot drop non-leaf table `{1}`.`{2}`
+UNSUPPORTED_DATA_TYPE 	= Table `{0}`.`{1}` has column `{2}` with unsupported data type `{3}`
+JOIN_TO_MULTIPLE_PARENTS= Table `{0}`.`{1}` has joins to two parents 
+UNSUPPORTED_INDEX_DATA_TYPE = Table `{0}`.`{1}` index `{2}` has unsupported type `{3}` from column `{4}`
+UNSUPPORTED_INDEX_SIZE 	= Table `{0}`.`{1}` index `{2}` exceeds maximum key size
+DUPLICATE_COLUMN 	= Table `{0}`.`{1}` already has column `{2}`
+DUPLICATE_GROUP 	= Group `{0}` already exists 
+REFERENCED_TABLE 	= Table {0} has one or more child tables in the group  
+DROP_INDEX_NOT_ALLOWED 	= DROP_INDEX_NOT_ALLOWED: Unused error code
+FK_DDL_VIOLATION 	= Cannot drop table `{0}`.`{1}`, it has child table `{2}`.`{3}`
+PROTECTED_INDEX 	= Index `{0}` can not be added or removed from table `{1}`.`{2}`
+BRANCHING_GROUP_INDEX 	= Group index `{0}` has tables `{1}`.`{2}` and `{3}`.`{4}` on different branches
+WRONG_NAME_FORMAT 	= Expected {0} in format of table.column
 
 #
 # DML ERRORS
 #
-3000 = NO_REFERENCED_ROW: Unused error code
-3001 = Non-unique key for index `{0}`: {1}
-3002 = Can not find the table `{0}`.`{1}` 
+NO_REFERENCED_ROW 	= NO_REFERENCED_ROW: Unused error code
+DUPLICATE_KEY 		= Non-unique key for index `{0}`: {1}
+NO_SUCH_TABLE 		= Can not find the table `{0}`.`{1}` 
 
-3004 = Unknown index: `{0}`
-3005 = NO_SUCH_RECORD: Unused error code
-3006 = FK_CONSTRAINT_VIOLATION: Unused error code
-3007 = UNSUPPORTED_MODIFICATION: Unused error code
+NO_INDEX 		= Unknown index: `{0}`
+NO_SUCH_RECORD		= NO_SUCH_RECORD: Unused error code
+FK_CONSTRAINT_VIOLATION	= FK_CONSTRAINT_VIOLATION: Unused error code
+UNSUPPORTED_MODIFICATION= UNSUPPORTED_MODIFICATION: Unused error code
 
-3009 = ID<{0}> from RowData didn't match given ID <{0}> 
-3010 = Missing record at key: {0}
-3011 = Update concurrent with scan for {0} 
-3012 = Update concurrent with table definition change for {0}
-3013 = No group with name {0} 
-3014 = Can not find table definition for id <{0}> 
-3015 = Update row did not update any rows: {0}    
-3016 = Update row touched {0}, altered {1} rows: {2}  
-3017 = Can not find a table by ID <{0}>
-3018 = Scan abandoned after <{0}> retries
+TABLEDEF_MISMATCH 	= ID<{0}> from RowData didn't match given ID <{0}>
+NO_SUCH_ROW 		= Missing record at key: {0}
+CONCURRENT_MODIFICATION = Update concurrent with scan for {0}
+TABLE_DEFINITION_CHANGED= Update concurrent with table definition change for {0}
+NO_SUCH_GROUP 		= No group with name {0}
+NO_SUCH_TABLEDEF 	= Can not find table definition for id <{0}>
+NO_ROWS_UPDATED 	= Update row did not update any rows: {0}
+TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
+NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
+SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
     
-4011 = Buffer too small to accommodate row output. Row count: {0} 
+ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0} 
 
 #
 # Messaging Errros
 #
-21000 = MALFORMED_REQUEST: Unused error code 
-21004 = Unexpected histogram request type <{0}>
+MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code 
+BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
     
 #
 # AIS Validations errors, attempts to modify or build an AIS failed
 #
-22000 = VALIDATION_FAILURE: Unused error code
-22001 = INTERNAL_REFERENCES_BROKEN: Unused error code
-22002 = Group `{0}` has multiple root tables: `{1}`.`{2}` and `{3}`.`{4}`
-22003 = Column `{0}`.`{1}`.`{2}` type used for join does not match parent column `{3}`.`{4}`.`{5}`
-22004 = Table `{0}`.`{1}` primary key has a nullable column {2}
-22005 = Table `{0}`.`{1}` already has index `{2}`
-22006 = Table `{0}`.`{1}` is missing its primary key
-22007 = Table `{0}`.`{1}` has a duplicate tableID to table `{2}`.`{3}`
-22008 = Join column list size ({0}) for table `{1}`.`{2}` does not match table `{3}`.`{4}` primary key ({5})
-22009 = Table `{0}`.`{1}` index `{2}` defined without any columns
-22010 = Unknown column: `{0}`
-22011 = Index `{0}`.`{1}`.`{2}` has duplicate tree name to index `{3}`.`{4}`.`{5}`. Treename: [{6}]
-22012 = Table `{0}`.`{1}` has duplicate tree name to table `{2}`.`{3}`. Treename: [{4}]
-22013 = Table `{0}`.`{1}` does not belong to any group
-22014 = Attempting to create {0} with a null {1}
-22015 = Index `{0}`.`{1}`.`{2}` has duplicate column `{3}`
-22016 = Table `{0}`.`{1}` has column `{2}` in position <{3}> which is out of index order <{4}>
-22017 = Table `{0}`.`{1}` column `%s` is not in Group table
-22018 = Group table `{0}`.`{1}` is missing user table column `{2}`.`{3}`.`{4}`
-22019 = Group table `{0}`.`{1}` is missing user table index `{2}`
-22020 = Table `{0}`.`{1}` treename `{2}` does not match its group table treename `{3}
-22021 = {0} `{1}` has null reference to {2}
-22022 = {0} `{1}` has bad reference to {2} `{3}`
-22023 = {0} `{1}` has incorrect internal setting for {2}
+VALIDATION_FAILURE 	= VALIDATION_FAILURE: Unused error code
+INTERNAL_REFERENCES_BROKEN = INTERNAL_REFERENCES_BROKEN: Unused error code
+GROUP_MULTIPLE_ROOTS 	= Group `{0}` has multiple root tables: `{1}`.`{2}` and `{3}`.`{4}`
+JOIN_TYPE_MISMATCH 	= Column `{0}`.`{1}`.`{2}` type used for join does not match parent column `{3}`.`{4}`.`{5}`
+PK_NULL_COLUMN 		= Table `{0}`.`{1}` primary key has a nullable column {2}
+DUPLICATE_INDEXES 	= Table `{0}`.`{1}` already has index `{2}`
+MISSING_PRIMARY_KEY 	= Table `{0}`.`{1}` is missing its primary key
+DUPLICATE_TABLEID 	= Table `{0}`.`{1}` has a duplicate tableID to table `{2}`.`{3}`
+JOIN_COLUMN_MISMATCH 	= Join column list size ({0}) for table `{1}`.`{2}` does not match table `{3}`.`{4}` primary key ({5})
+INDEX_LACKS_COLUMNS 	= Table `{0}`.`{1}` index `{2}` defined without any columns
+NO_SUCH_COLUMN 		= Unknown column: `{0}`
+DUPLICATE_INDEX_TREENAME= Index `{0}`.`{1}`.`{2}` has duplicate tree name to index `{3}`.`{4}`.`{5}`. Treename: [{6}]
+DUPLICATE_TABLE_TREENAME= Table `{0}`.`{1}` has duplicate tree name to table `{2}`.`{3}`. Treename: [{4}]
+TABLE_NOT_IN_GROUP 	= Table `{0}`.`{1}` does not belong to any group
+NAME_IS_NULL 		= Attempting to create {0} with a null {1}
+DUPLICATE_INDEX_COLUMN 	= Index `{0}`.`{1}`.`{2}` has duplicate column `{3}`
+COLUMN_POS_ORDERED 	= Table `{0}`.`{1}` has column `{2}` in position <{3}> which is out of index order <{4}>
+TABLE_COL_IN_GROUP 	= Table `{0}`.`{1}` column `{3}` is not in any group table
+GROUP_MISSING_COL 	= Group table `{0}`.`{1}` is missing user table column `{2}`.`{3}`.`{4}`
+GROUP_MISSING_INDEX 	= Group table `{0}`.`{1}` is missing user table index `{2}`
+TREENAME_MISMATCH 	= Table `{0}`.`{1}` treename `{2}` does not match its group table treename `{3}`
+NULL_REFERENCE 		= {0} `{1}` has null reference to {2}
+BAD_AIS_REFERENCE 	= {0} `{1}` has bad reference to {2} `{3}`
+BAD_INTERNAL_SETTING 	= {0} `{1}` has incorrect internal setting for {2}
 
-30900 = MULTIGENERATION_TABLE: Unused error code
+MULTIGENERATIONAL_TABLE	= MULTIGENERATIONAL_TABLE: Unused error code
 
     // Bad AkSserver errors
 #
 # Internal Akiban Server errors, should never be seen in normal operation 
 #    
-31000 = INTERNAL_ERROR: Unused error code
-31001 = Internal corrupt RowData at {0}
-31002 = Serialized AIS size <{0}> exceeds maximum size <{1}>
-31003 = Finished scan cursor requested more rows: {0} 
-31004 = Cursor/RowCollector for Table <{0}> is unknown
-31005 = No cursor found for tableId <{0}>
-31006 = Removing RowCollector for Table <{0}> removed the wrong one
-31007 = Persistit Data Layer error: {0}
-31008 = {0} service has not been started correctly
-31009 = {0} service has already been started
+INTERNAL_ERROR 		= INTERNAL_ERROR: Unused error code
+INTERNAL_CORRUPTION 	= Internal corrupt RowData at {0}
+AIS_TOO_LARGE 		= Serialized AIS size <{0}> exceeds maximum size <{1}>
+CURSOR_IS_FINISHED 	= Finished scan cursor requested more rows: {0} 
+CURSOR_IS_UNKNOWN 	= Cursor/RowCollector for Table <{0}> is unknown
+NO_ACTIVE_CURSOR 	= No cursor found for tableId <{0}>
+CURSOR_CLOSE_BAD 	= Removing RowCollector for Table <{0}> removed the wrong one
+PERSISTIT_ERROR 	= Persistit Data Layer error: {0}
+SERVICE_NOT_STARTED 	= {0} service has not been started correctly
+SERVICE_ALREADY_STARTED = {0} service has already been started
