--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -120,6 +120,7 @@ THREAD_STOP_INTR 	= {0} service failed to stop thread because: {1}
 NET_START_IO_ERROR	= Network service failed to start due to IO error: {0}
 NET_STOP_IO_ERROR	= Network service failed to stop due to IO error: {0} 
 TAP_BEAN_FAIL		= Akiban Server Tap bean startup failure: {0}
+SET_FILTER_FAIL		= PersisitStore setting DisplayFilter failed because {0}
 #
 # Akiban Server errors
 #
@@ -136,3 +137,4 @@ CURSOR_IS_UNKNOWN 	= Cursor/RowCollector for Table <{0}> is unknown
 NO_ACTIVE_CURSOR 	= No cursor found for tableId <{0}>
 CURSOR_CLOSE_BAD 	= Removing RowCollector for Table <{0}> removed the wrong one
 PERSISTIT_ERROR 	= Persistit Data Layer error: {0}
+INVALID_VOLUME		= TreeService tried to load a bad volume: {0}
