--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -29,9 +29,9 @@ PARSE_EXCEPTION 	= [{0}] {1}: {2}
 UNSUPPORTED_CHARSET 	= Table `{0}`.`{1}` has unsupported character set `{2}` 
 PROTECTED_TABLE 	= Cannot create or modify table `{0}` in protected schema `{1}` 
 JOIN_TO_PROTECTED_TABLE = Table `{0}`.`{1}` joins to protected table `{2}`.`{3}` 
-JOIN_TO_UNKNOWN_TABLE 	= Table `{0}`.`{1}` joins to undefined table `{2}`.`{3}`  
+JOIN_TO_UNKNOWN_TABLE 	= Table `{0}`.`{1}` joins to undefined table `{2}`.`{3}`
 JOIN_TO_WRONG_COLUMNS 	= Table `{0}`.`{1}` join reference part `{2}` does not match `{3}`.`{4}` primary key part `{5}`
-DUPLICATE_TABLE 	= Table `{0}`.`{1}` already exists 
+DUPLICATE_TABLE 	= Table `{0}`.`{1}` already exists
 UNSUPPORTED_DROP 	= Cannot drop non-leaf table `{1}`.`{2}`
 UNSUPPORTED_DATA_TYPE 	= Table `{0}`.`{1}` has column `{2}` with unsupported data type `{3}`
 JOIN_TO_MULTIPLE_PARENTS= Table `{0}`.`{1}` has joins to two parents 
@@ -50,7 +50,9 @@ WRONG_NAME_FORMAT 	= Expected {0} in format of table.column
 # DML ERRORS
 #
 NO_REFERENCED_ROW 	= NO_REFERENCED_ROW: Unused error code
-DUPLICATE_KEY 		= Non-unique key for index `{0}`: {1}
+# NOTE: DO NOT CHANGE THE FORMAT OF THIS MESSAGE, ha_akibandb::info() relies on this to correctly determine 
+# the index on duplicate key insert failure. 
+DUPLICATE_KEY 		= Non-unique key for index {0}: {1}
 NO_SUCH_TABLE 		= Can not find the table `{0}`.`{1}` 
 
 NO_INDEX 		= Unknown index: `{0}`
@@ -69,12 +71,12 @@ TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
 NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
 SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
     
-ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0} 
+ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 
 #
 # Messaging Errros
 #
-MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code 
+MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
     
 #
@@ -118,7 +120,7 @@ CONFIG_LOAD_FAILED	= Configuration Service is unable to load {0} because {1}
 THREAD_START_INTR	= {0} service failed to start thread because: {1}
 THREAD_STOP_INTR 	= {0} service failed to stop thread because: {1}
 NET_START_IO_ERROR	= Network service failed to start due to IO error: {0}
-NET_STOP_IO_ERROR	= Network service failed to stop due to IO error: {0} 
+NET_STOP_IO_ERROR	= Network service failed to stop due to IO error: {0}
 TAP_BEAN_FAIL		= Akiban Server Tap bean startup failure: {0}
 SET_FILTER_FAIL		= PersisitStore setting DisplayFilter failed because {0}
 #
@@ -132,7 +134,7 @@ MULTIGENERATIONAL_TABLE	= MULTIGENERATIONAL_TABLE: Unused error code
 INTERNAL_ERROR 		= INTERNAL_ERROR: Unused error code
 INTERNAL_CORRUPTION 	= Internal corrupt RowData at {0}
 AIS_TOO_LARGE 		= Serialized AIS size <{0}> exceeds maximum size <{1}>
-CURSOR_IS_FINISHED 	= Finished scan cursor requested more rows: {0} 
+CURSOR_IS_FINISHED 	= Finished scan cursor requested more rows: {0}
 CURSOR_IS_UNKNOWN 	= Cursor/RowCollector for Table <{0}> is unknown
 NO_ACTIVE_CURSOR 	= No cursor found for tableId <{0}>
 CURSOR_CLOSE_BAD 	= Removing RowCollector for Table <{0}> removed the wrong one
