First part of updating Postgres drive to new error code standards. Have the prostgres driver returning error message/code/descriptions correctly. Fix a few (but not all yet) places from StandardException to IOE subclass. Is broken, wont compile.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -70,15 +70,16 @@ NO_ROWS_UPDATED 	= Update row did not update any rows: {0}
 TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
 NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
 SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
+NO_TRANSACTION		= No transaction currently in progress for this session
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 
 #
-# Messaging Errros
+# Messaging Errors
 #
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
-    
+UNSUPPORTED_SQL 	= Unsupported SQL {0} : {1}    
 #
 # AIS Validations errors, attempts to modify or build an AIS failed
 #
