--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -70,16 +70,14 @@ NO_ROWS_UPDATED 	= Update row did not update any rows: {0}
 TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
 NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
 SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
-NO_TRANSACTION		= No transaction currently in progress for this session
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
-
 #
-# Messaging Errors
+# Messaging Errros
 #
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
-UNSUPPORTED_SQL 	= Unsupported SQL {0} : {1}    
+    
 #
 # AIS Validations errors, attempts to modify or build an AIS failed
 #
@@ -124,6 +122,8 @@ NET_START_IO_ERROR	= Network service failed to start due to IO error: {0}
 NET_STOP_IO_ERROR	= Network service failed to stop due to IO error: {0}
 TAP_BEAN_FAIL		= Akiban Server Tap bean startup failure: {0}
 SET_FILTER_FAIL		= PersisitStore setting DisplayFilter failed because {0}
+SCHEMA_LOAD_IO_ERROR	= Loading base AIS schema failed due to IO error: {0}
+
 #
 # Akiban Server errors
 #
