Add new exceptions to handle the MySQLSource/Target commit failure Add new exception for CSVSource Add new exception for InstrumentationServiceImpl close failure

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -72,6 +72,8 @@ NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
 SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
+AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
+
 #
 # Messaging Errros
 #
@@ -123,7 +125,7 @@ NET_STOP_IO_ERROR	= Network service failed to stop due to IO error: {0}
 TAP_BEAN_FAIL		= Akiban Server Tap bean startup failure: {0}
 SET_FILTER_FAIL		= PersisitStore setting DisplayFilter failed because {0}
 SCHEMA_LOAD_IO_ERROR	= Loading base AIS schema failed due to IO error: {0}
-
+QUERY_LOG_CLOSE_FAIL	= Closing the query log failed due to IO error: {0}
 #
 # Akiban Server errors
 #
