--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -73,6 +73,7 @@ SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
+AIS_CSV_ERROR		= {0} generated IOException: {1}
 
 #
 # Messaging Errros
