Add 26 new exceptions for the Postgres Driver and AkibanSQL parser interaction. Update the Postgres Driver to use new ErrorCodes/exceptions and return values

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -45,7 +45,13 @@ FK_DDL_VIOLATION 	= Cannot drop table `{0}`.`{1}`, it has child table `{2}`.`{3}
 PROTECTED_INDEX 	= Index `{0}` can not be added or removed from table `{1}`.`{2}`
 BRANCHING_GROUP_INDEX 	= Group index `{0}` has tables `{1}`.`{2}` and `{3}`.`{4}` on different branches
 WRONG_NAME_FORMAT 	= Expected {0} in format of table.column
-
+DUPLICATE_VIEW		= View `{0}` already exists
+UNDEFINED_VIEW		= Unknown view `{0}`
+SUBQUERY_ONE_COLUMN	= Subquery must exactly return one column
+DUPLICATE_SCHEMA	= Schema `{0}` already exists
+DROP_SCHEMA_NOT_ALLOWED = Schema `{0}` contains user objects and can not be dropped
+WRONG_TABLE_FOR_INDEX	= Table `{0}`.`{1}` can not be used to create index
+MISSING_DDL_PARAMETERS	= Missing expected parameters to DDL
 #
 # DML ERRORS
 #
@@ -70,6 +76,16 @@ NO_ROWS_UPDATED 	= Update row did not update any rows: {0}
 TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
 NO_SUCH_TABLEID 	= Can not find a table by ID <{0}>
 SCAN_RETRY_ABANDONDED 	= Scan abandoned after <{0}> retries
+NO_TRANSACTION		= No transaction currently in progress for this session
+TRANSACTION_IN_PROGRESS = A transaction is already in progress for this session
+SELECT_EXISTS_ERROR	= Cannot `SELECT *` in non-EXISTS subquery
+AMBIGUOUS_COLUMN_NAME	= Column `{0}` is ambiguous
+UNABLE_TO_EXPLAIN	= Cannot `EXPLAIN` this statement
+SUBQUERY_RESULT_FAIL	= Setting result set for subquery to boolean failed: {0}
+JOIN_NODE_ERROR		= Adding join node to table `{0}`.`{1}` failed: {2}
+MULTIPLE_JOINS		= Too many joins using table `{0}`.`{1}`
+VIEW_BAD_SUBQUERY	= View `{0}` does not have a correct query plan: {0}
+TABLE_BAD_SUBQUERY	= Binding information for subquery table `{0}`.`{1}` failed: {2}
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
@@ -80,6 +96,7 @@ AIS_CSV_ERROR		= {0} generated IOException: {1}
 #
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
+
     
 #
 # AIS Validations errors, attempts to modify or build an AIS failed
@@ -109,6 +126,19 @@ NULL_REFERENCE 		= {0} `{1}` has null reference to {2}
 BAD_AIS_REFERENCE 	= {0} `{1}` has bad reference to {2} `{3}`
 BAD_INTERNAL_SETTING 	= {0} `{1}` has incorrect internal setting for {2}
 TYPES_ARE_STATIC	= Type {0} isn't from the static list
+
+UNKNOWN_TYPE_SIZE	= Unknown or unsupported size for Type {0}
+UNKNOWN_TYPE		= Unknown or unsupported data type {0}
+
+#
+# Unsupported Features Errors, Should be empty, but isn't
+#
+UNSUPPORTED_SQL 	= Unsupported SQL {0} : {1}
+UNSUPPORTED_PARAMETERS	= Parameters to queries unsupported
+UNSUPPORTED_EXPLAIN	= Optimizer does not support `EXPLAIN`
+UNSUPPORTED_CREATE_SELECT = Unsupported `CREATE TABLE` from `SELECT`
+UNSUPPORTED_FK_INDEX	= Unsupported non-grouping Foreign Key
+UNSUPPORTED_CHECK	= Unsupported check constraint
 
 #
 # Configuration, Startup, and Shutdown Errors
@@ -144,3 +174,4 @@ NO_ACTIVE_CURSOR 	= No cursor found for tableId <{0}>
 CURSOR_CLOSE_BAD 	= Removing RowCollector for Table <{0}> removed the wrong one
 PERSISTIT_ERROR 	= Persistit Data Layer error: {0}
 INVALID_VOLUME		= TreeService tried to load a bad volume: {0}
+TABLE_NOT_BOUND		= AIS User table not bound to DML statement during compile; {0}
