Updates to query log for field work.

--- a/packages-common/server.properties
+++ b/packages-common/server.properties
@@ -49,7 +49,12 @@ akserver.memcached.port=11211
 #######################################################################
 
 # whether to enable the akiban query log or not
-akserver.querylog=false
+akserver.querylog.enabled=false
 
 # file in which queries will be logged
-akserver.querylogfile=/var/log/akiban/queries.log
+akserver.querylog.filename=/var/log/akiban/queries.log
+
+# threshold in nano seconds for query execution time
+# default is 0 which specifies that all queries are
+# logged
+akserver.querylog.exec_time_threshold=0
