--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -35,8 +35,9 @@ akserver.postgres.statementCacheCapacity=0
 akserver.tcp_no_delay=true
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
-akserver.querylog=false
-akserver.querylogfile=
+akserver.querylog.enabled=false
+akserver.querylog.filename=
+akserver.querylog.exec_time_threshold=0
 
 mysql.install.dir=
 
